--- a/application/config/app_config.php.org
+++ b/application/config/app_config.php.org
@@ -1,8 +1,8 @@
 <?php  if ( ! defined('BASEPATH')) exit('No direct script access allowed');
 
 /*General Info*/
-$config['program_name']			=	'WePOS-Cafe';
-$config['program_version']		=	'3.42.20';
+$config['program_name']			=	'WePOS.Cafe';
+$config['program_version']		=	'3.42.21';
 $config['program_release']		=	'2019';
 $config['program_name_short'] 	=	'WePOS.Cafe';
 $config['copyright']			=	$config['program_name_short'].' v'.$config['program_version'].' &copy copyright '.$config['program_release'];
